# Website

./: .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  vercel.json  vite.config.ts
api/: gencourse.py  index.py  models.py  parse.py
src/: auth.ts  hooks.server.ts
src/lib/: db.ts
src/lib/Components/: Login.svelte  Navbar.svelte
src/routes/: +error.svelte  +layout.server.js  +layout.svelte  +page.svelte
src/routes/courses/: +page.server.ts  +page.svelte  +server.ts
src/routes/courses/[slug]/: +page.svelte
src/routes/courses/[slug]/[module]/: +page.svelte
src/routes/getdata/: +server.ts
src/routes/signout/: +page.svelte
