[project]
name = "coursegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.1",
    "flask-restx>=1.3.0",
    "flask>=3.0.3",
    "certifi>=2024.8.30",
    "langchain-openai>=0.2.6",
    "langchain>=0.3.7",
    "pdfminer-six[image]>=20240706",
    "pydantic>=2.9.2",
    "pypdf",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    "uvicorn>=0.32.0",
    "pymongo>=4.10.1",
]

[tool.uv.sources]
pypdf = { git = "https://github.com/py-pdf/pypdf" }
